# MxUtils-fork

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
API_plugins/: .gitignore  CMakeLists.txt
API_plugins/Onnxinfer/: CMakeLists.txt  OnnxInfer.cpp  OnnxInfer.h  OnnxInfer.sln  OnnxInfer.vcxproj
API_plugins/TfInfer/: CMakeLists.txt  TfInfer.cpp  TfInfer.h
API_plugins/TfliteInfer/: CMakeLists.txt  TfliteInfer.cpp  TfliteInfer.h
API_plugins/debequivs/: memx-accl-plugins  memx-accl-plugins_1.0.0-6_all.deb
API_plugins/debian_d11/: changelog  control
API_plugins/debian_d12/: changelog  control  copyright  rules
API_plugins/debian_u22/: changelog  control
API_plugins/debian_u24/: changelog  control
API_plugins/pkg_misc/: 00-memx-prepost.conf
mxutils_gui/: CMakeLists.txt  gui_view.cpp  gui_view.h
mxutils_gui/debequivs/: memx-utils-gui  memx-utils-gui_1.0.0-6_all.deb
mxutils_gui/debian_mid/: changelog  control  rules
mxutils_gui/debian_new/: changelog  control  copyright
mxutils_gui/debian_old/: changelog  control
