message(STATUS "MX_API_HOME_DIR  set to " $ENV{MX_API_HOME})

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR} "*")

FOREACH(subdir ${SUBDIRS})
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
    ADD_SUBDIRECTORY(${subdir})
  endif()
ENDFOREACH()

set(ALL_STATIC_UTILS ${ALL_STATIC_UTILS} PARENT_SCOPE)
